@@ -1,3 +1,8 @@
+2007-09-24  Joris Van Damme  <joris.at.lebbeke@skynet.be>
+
+	* tif_dirinfo.c: Fixed (MSVC) compiler reports about 
+	inconsistent use of const in tiffFields and exifFields definition
+
 2007-09-20  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* tif_dirwrite.c: Always write tile/strip offsets and sizes
